UI: Fix alignment issues and add font

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,6 +1,19 @@
+@font-face {
+    src: url("fonts/Lato-Regular.ttf");
+}
+
+@font-face {
+    src: url("fonts/Lato-Bold.ttf");
+}
+
 .background {
     -fx-background-color: derive(#070f36, 20%);
     background-color: #383838; /* Used in the default.html file */
+}
+
+/* Enables anti-aliasing */
+.text{
+    -fx-font-smoothing-type: gray;
 }
 
 .label {
@@ -123,19 +136,21 @@
 }
 
 .cell_big_label {
-    -fx-font-family: "Impact";
+    -fx-font-family: "Lato";
+    -fx-font-weight: 700;
     -fx-font-size: 18px;
     -fx-text-fill: #144073;
 }
 
 .cell_session_label {
-    -fx-font-family: "Impact";
+    -fx-font-family: "Lato";
+    -fx-font-weight: 700;
     -fx-font-size: 18px;
     -fx-text-fill: #7d6b49;
 }
 
 .cell_small_label {
-    -fx-font-family: "Impact";
+    -fx-font-family: "Lato Semibold";
     -fx-font-size: 13px;
     -fx-text-fill: black;
 }
@@ -149,19 +164,20 @@
 }
 
 .student-title, .class-title {
-    -fx-font-family: "Impact";
+    -fx-font-family: "Lato";
+    -fx-font-weight: 700;
     -fx-text-fill: black;
     -fx-font-size: 20;
     -fx-background-insets: 10;
     -fx-text-box-border: transparent;
 }
 
-.student-title .content{
+.student-title-container {
     -fx-background-color: #acedd9;
     -fx-background-radius: 30 30 0 0;
 }
 
-.class-title .content{
+.class-title-container {
     -fx-background-color: #a5dff0;
     -fx-background-radius: 30 30 0 0;
 }
@@ -183,15 +199,17 @@
 }
 
 .result-display {
-    -fx-font-family: "Impact";
+    -fx-font-family: "Lato";
     -fx-text-fill: black;
     -fx-font-size: 17;
     -fx-background-insets: 10;
     -fx-text-box-border: transparent;
+
 }
 
 .result-display .content{
     -fx-background-color: #dedede;
+    -fx-background-radius: 0 0 0 0;
 }
 
 .result-display .scroll-pane .viewport{
@@ -199,9 +217,8 @@
 }
 
 .status-bar .label {
-    -fx-font-family: "Impact";
+    -fx-font-family: "Lato";
     -fx-font-style: normal;
-    -fx-font-weight: 300;
     -fx-text-fill: white;
     -fx-padding: 4px;
     -fx-pref-height: 30px;
@@ -242,7 +259,7 @@
 #helpButton, #unfocusButton, #helpFocusButton {
     -fx-font-size: 12pt;
     -fx-font-style: normal;
-    -fx-font-weight: 300;
+    -fx-font-weight: 700;
     -fx-padding: 5;
 }
 
@@ -274,7 +291,7 @@
     -fx-border-insets: 1 1 1 1, 0;
     -fx-background-radius: 20;
     -fx-background-color: transparent;
-    -fx-font-family: "Impact";
+    -fx-font-family: "Lato";
     -fx-font-weight: 300;
     -fx-text-fill: black;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
@@ -349,8 +366,9 @@
 #commandTextField {
     -fx-background-color: #F8F8F8;
     -fx-background-insets: 0;
-    -fx-font-family: 'Impact';
+    -fx-font-family: 'Lato';
     -fx-font-style: normal;
+    -fx-font-weight: 700;
     -fx-font-size: 13pt;
     -fx-text-fill: black;
     -fx-background-radius: 0 0 20 20;
